# banyun_download

./: .gitignore  main.py  pyproject.toml  test_get_credentials.py
operations/: add_paper.py  ainit.py  ask_llm_menshen.py  connect_browser.py  download_page.py  model.py  province_city.txt
other/: 重复.txt
output_toml/: 浙江省义乌市宾王学校2024-2025学年八年级下学期5月校本作业科学试卷.toml  浙江省杭州市西湖区2024-2025学年初一下学期期末考科学试卷.toml
